--- a/chapter_2_data_representations_for_neural_networks.ipynb
+++ b/chapter_2_data_representations_for_neural_networks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0fgUrK5gv7KKX/6IWYQtp",
+      "authorship_tag": "ABX9TyMKl3TZF8unHpZqbspZcAsC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -952,9 +952,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bX89gXPGYOhR",
-        "outputId": "c049bb04-a719-4e46-c9f2-fc4faf45ce1d"
+        "outputId": "12815efc-45e3-4da7-ab52-433f4f88e6dd"
       },
-      "execution_count": 60,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,17 +964,160 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#2.3.3 Tensor product"
+        "#2.3.3 Tensor product or dot product # product is the result of the multiplication\n",
+        "x = np.random.random((32,))\n",
+        "y = np.random.random((32,))\n",
+        "z = np.dot(x,y) # z = product\n",
+        "z"
       ],
       "metadata": {
-        "id": "xr9MKN3ZZJwj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xr9MKN3ZZJwj",
+        "outputId": "d56f6872-1866-43c0-e723-732334e06476"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7.04656303319602"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#what does the dot operation do?\n",
+        "def naive_vector_dot(x,y):\n",
+        "  assert len(x.shape) == 1\n",
+        "  assert len(y.shape) == 1\n",
+        "  z = 0.\n",
+        "  for i in range(x.shape[0]):\n",
+        "    z += x[i] * y[i]\n",
+        "    #print(z)\n",
+        "  return z\n",
+        "\n",
+        "x = np.random.random((32,))\n",
+        "y = np.random.random((32,))\n",
+        "#print(x,y)\n",
+        "print(naive_vector_dot(x,y))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2H-J8epHhqZG",
+        "outputId": "468980a9-0da6-4c17-f781-82109c2b3c26"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.438769063856745\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#product between a matrix and vector\n",
+        "def naive_matrix_vector_dot(x,y):\n",
+        "  assert len(x.shape) == 2\n",
+        "  assert len(y.shape) == 1\n",
+        "  assert x.shape[1] == y.shape[0]\n",
+        "  z = np.zeros(x.shape[0])\n",
+        "  #print(z)\n",
+        "  for i in range(x.shape[0]):\n",
+        "    for j in range(x.shape[1]):\n",
+        "      z[i] += x[i, j] * y[j]\n",
+        "      #print(z)\n",
+        "  return z\n",
+        "\n",
+        "x = np.random.random((2,32))\n",
+        "y = np.random.random((32,))\n",
+        "print(naive_matrix_vector_dot(x,y))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BuvBsUhXlAcl",
+        "outputId": "103c0a4f-0953-42d4-a6d3-fe969d53b217"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[11.02903562 10.13552369]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using two functions\n",
+        "def naive_matrix_vector_dot(x,y):\n",
+        "  assert len(x.shape) == 2\n",
+        "  assert len(y.shape) == 2\n",
+        "  assert x.shape[1] == y.shape[0]\n",
+        "  z = np.zeros((x.shape[0], y.shape[1]))\n",
+        "  for i in range(x.shape[0]):\n",
+        "    for j in range(y.shape[1]):\n",
+        "      row_x = x[i,:]\n",
+        "      column_y = y[:,j]\n",
+        "      z[i,j] = naive_vector_dot(row_x, column_y)\n",
+        "  return z\n",
+        "\n",
+        "x = np.random.random((2,32))\n",
+        "y = np.random.random((32,2))\n",
+        "print(naive_matrix_vector_dot(x,y))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fv41-cwmkTEW",
+        "outputId": "112d4ac8-876f-49ea-8286-4c861bc8b5e9"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[7.40996901 8.01629281]\n",
+            " [8.86948245 8.19649723]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2.3.4 Tensor reshaping"
+      ],
+      "metadata": {
+        "id": "sSadgcx2q1zM"
       },
       "execution_count": null,
       "outputs": []
