stop before 2.5.3 the full training loop

--- a/chapter_2_data_representations_for_neural_networks.ipynb
+++ b/chapter_2_data_representations_for_neural_networks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6nE1RiZMvp//RXH8XB4zh",
+      "authorship_tag": "ABX9TyMLVUG+eEOdEOYY/PJw5rVN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1382,13 +1382,14 @@
       "cell_type": "code",
       "source": [
         "#2.5.1 Reimplement our first example from scratch in TensorFlow\n",
+        "#simple dense class\n",
         "import tensorflow as tf\n",
         "class NaiveDense:\n",
         "  def __init__(self, input_size,output_size,activation):\n",
         "    self.activation = activation\n",
         "\n",
         "    w_shape = (input_size,output_size) #Create a matrix, W, of shape (input_size, output_size), initialized with random values.\n",
-        "    w_initial_value = tf.radom.uniform(w_shape, minval=0, maxval=1e-1)\n",
+        "    w_initial_value = tf.random.uniform(w_shape, minval=0, maxval=1e-1)\n",
         "    self.W = tf.Variable(w_initial_value)\n",
         "\n",
         "    b_shape =(output_size,) #I am not sure ---> Create a vector, b, of shape (output_size,), initialized with zeros.\n",
@@ -1405,7 +1406,129 @@
       "metadata": {
         "id": "PKhnpU--aE83"
       },
-      "execution_count": 9,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A SIMPLE SEQUENTIAL CLASS\n",
+        "class NaiveSequential:\n",
+        "  def __init__(self, layers):\n",
+        "    self.layers = layers\n",
+        "\n",
+        "  def __call__(self, inputs):\n",
+        "    x = inputs\n",
+        "    for layer in self.layers:\n",
+        "      x = layer(x)\n",
+        "    return x\n",
+        "\n",
+        "  @property\n",
+        "  def weights(self):\n",
+        "    weights = []\n",
+        "    for layer in self.layers:\n",
+        "      weights += layer.weights\n",
+        "    return weights"
+      ],
+      "metadata": {
+        "id": "lGvbzfErgAf2"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = NaiveSequential([\n",
+        "    NaiveDense(input_size=28 * 28, output_size=512, activation=tf.nn.relu),\n",
+        "    NaiveDense(input_size=512, output_size=10, activation=tf.nn.softmax)\n",
+        "])\n",
+        "assert len(model.weights) == 4"
+      ],
+      "metadata": {
+        "id": "Ji1mF4YrhlX9"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A BATCH GENERATOR\n",
+        "#iterate over the MNIST data in mini-batches\n",
+        "import math\n",
+        "class BatchGenerator:\n",
+        "  def __ini__(self, images, labels, batch_size=128):\n",
+        "    assert len(images) == len(labels)\n",
+        "    self.index = 0\n",
+        "    self.images = images\n",
+        "    self.labels = labels\n",
+        "    self.batch_size = batch_size\n",
+        "    self.num_batches = math.ceil(len(images) / batch_size)\n",
+        "\n",
+        "  def next(self):\n",
+        "    images = self.images[self.index : self.index + self.batch_size]\n",
+        "    labels = self.labels[self.index : self.index + self.batch_size]\n",
+        "    self.index += self.batch_size\n",
+        "    return images, labels"
+      ],
+      "metadata": {
+        "id": "ATg9XyAYnb1w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy.lib.function_base import gradient\n",
+        "# 2.5.2 Running one training step\n",
+        "#1 - Compute the predictions of the model for the images in the batch. \n",
+        "#2 - Compute the loss value for these predictions, given the actual labels. \n",
+        "#3 - Compute the gradient of the loss with regard to the model’s weights. \n",
+        "#4 - Move the weights by a small amount in the direction opposite to the gradient.\n",
+        "def one_training_step(model, images_batch, labels_batch):\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    predictions = model(images_batch)\n",
+        "    per_sample_losses = tf.keras.losses.sparse_categorical_crossentropy(labels_batch, predictions)\n",
+        "    average_loss = tf.reduce_mean(per_sample_losses)\n",
+        "    gradients = tape.gradient(average_loss, model.weights)\n",
+        "    update_weights(gradients, model.weights)\n",
+        "    return average_loss\n",
+        "\n",
+        "learning_rate = le-3\n",
+        "\n",
+        "def update_weights(gradients, weights):\n",
+        "  for g, w in zip(gradients, weights):\n",
+        "    w.assign_sub(g * learning_rate)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 133
+        },
+        "id": "9iC329R7nO7e",
+        "outputId": "303b805e-c35a-4cb5-b7c5-702d77c31e1c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-810d947cd271>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(a : 1+1)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DtdkBwTQqMIF"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
