test try of the: Reimplement our first example from scratch in TensorFlow

--- a/chapter_2_data_representations_for_neural_networks.ipynb
+++ b/chapter_2_data_representations_for_neural_networks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLVUG+eEOdEOYY/PJw5rVN",
+      "authorship_tag": "ABX9TyNQyOFXxFYKuyi/fk1OBBMk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1406,7 +1406,7 @@
       "metadata": {
         "id": "PKhnpU--aE83"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1433,7 +1433,7 @@
       "metadata": {
         "id": "lGvbzfErgAf2"
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1448,7 +1448,7 @@
       "metadata": {
         "id": "Ji1mF4YrhlX9"
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1457,36 +1457,37 @@
         "# A BATCH GENERATOR\n",
         "#iterate over the MNIST data in mini-batches\n",
         "import math\n",
-        "class BatchGenerator:\n",
-        "  def __ini__(self, images, labels, batch_size=128):\n",
-        "    assert len(images) == len(labels)\n",
-        "    self.index = 0\n",
-        "    self.images = images\n",
-        "    self.labels = labels\n",
-        "    self.batch_size = batch_size\n",
-        "    self.num_batches = math.ceil(len(images) / batch_size)\n",
         "\n",
-        "  def next(self):\n",
-        "    images = self.images[self.index : self.index + self.batch_size]\n",
-        "    labels = self.labels[self.index : self.index + self.batch_size]\n",
-        "    self.index += self.batch_size\n",
-        "    return images, labels"
+        "class BatchGenerator:\n",
+        "    def __init__(self, images, labels, batch_size=128):\n",
+        "        assert len(images) == len(labels)\n",
+        "        self.index = 0\n",
+        "        self.images = images\n",
+        "        self.labels = labels\n",
+        "        self.batch_size = batch_size\n",
+        "        self.num_batches = math.ceil(len(images) / batch_size)\n",
+        "\n",
+        "    def next(self):\n",
+        "        images = self.images[self.index : self.index + self.batch_size]\n",
+        "        labels = self.labels[self.index : self.index + self.batch_size]\n",
+        "        self.index += self.batch_size\n",
+        "        return images, labels"
       ],
       "metadata": {
         "id": "ATg9XyAYnb1w"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from numpy.lib.function_base import gradient\n",
         "# 2.5.2 Running one training step\n",
         "#1 - Compute the predictions of the model for the images in the batch. \n",
         "#2 - Compute the loss value for these predictions, given the actual labels. \n",
         "#3 - Compute the gradient of the loss with regard to the model’s weights. \n",
         "#4 - Move the weights by a small amount in the direction opposite to the gradient.\n",
+        "from numpy.lib.function_base import gradient\n",
         "def one_training_step(model, images_batch, labels_batch):\n",
         "  with tf.GradientTape() as tape:\n",
         "    predictions = model(images_batch)\n",
@@ -1496,40 +1497,142 @@
         "    update_weights(gradients, model.weights)\n",
         "    return average_loss\n",
         "\n",
-        "learning_rate = le-3\n",
+        "learning_rate = 1e-3\n",
         "\n",
         "def update_weights(gradients, weights):\n",
         "  for g, w in zip(gradients, weights):\n",
         "    w.assign_sub(g * learning_rate)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 133
-        },
-        "id": "9iC329R7nO7e",
-        "outputId": "303b805e-c35a-4cb5-b7c5-702d77c31e1c"
+        "id": "9iC329R7nO7e"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-810d947cd271>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(a : 1+1)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Sample use an Optimizer intance from Keras, like this:\n",
+        "#from tensorflow.keras import optimizers\n",
+        "#optimizer = optimizers.SGD(learning_rate=1e-3)\n",
+        "#def update_weights(gradients, weights):\n",
+        "#  optimizer.apply_gradients(zip(gradients, weights))"
+      ],
       "metadata": {
         "id": "DtdkBwTQqMIF"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2.5.3 The full training loop\n",
+        "def fit(model, images, labels, epochs, batch_size=128):\n",
+        "  for epoch_counter in range(epochs):\n",
+        "    print(f\"Epochs {epoch_counter}\")\n",
+        "    batch_generator = BatchGenerator(images, labels)\n",
+        "    for batch_counter in range(batch_generator.num_batches):\n",
+        "      images_batch, labels_batch = batch_generator.next()\n",
+        "      loss = one_training_step(model, images_batch, labels_batch)\n",
+        "      if batch_counter % 100 == 0:\n",
+        "        print(f\"loss at batch {batch_counter}:{loss:.2f}\")\n"
+      ],
+      "metadata": {
+        "id": "vQIQkkgil6Be"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#test drive\n",
+        "from tensorflow.keras.datasets import mnist\n",
+        "(train_images, train_labels),(test_images, test_labels) = mnist.load_data()\n",
+        "train_images = train_images.reshape((60000, 28 * 28))\n",
+        "train_images = train_images.astype(\"float32\") / 255\n",
+        "test_images = test_images.reshape((10000, 28 * 28))\n",
+        "test_images = test_images.astype(\"float32\") / 255\n",
+        "\n",
+        "fit(model,train_images,train_labels,epochs=10, batch_size=128)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jQv0iz4Ul6lV",
+        "outputId": "f012d046-465b-45ec-f154-4df8116cbe83"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epochs 0\n",
+            "loss at batch 0:6.50\n",
+            "loss at batch 100:2.20\n",
+            "loss at batch 200:2.21\n",
+            "loss at batch 300:2.07\n",
+            "loss at batch 400:2.19\n",
+            "Epochs 1\n",
+            "loss at batch 0:1.88\n",
+            "loss at batch 100:1.85\n",
+            "loss at batch 200:1.84\n",
+            "loss at batch 300:1.70\n",
+            "loss at batch 400:1.80\n",
+            "Epochs 2\n",
+            "loss at batch 0:1.56\n",
+            "loss at batch 100:1.56\n",
+            "loss at batch 200:1.51\n",
+            "loss at batch 300:1.42\n",
+            "loss at batch 400:1.49\n",
+            "Epochs 3\n",
+            "loss at batch 0:1.31\n",
+            "loss at batch 100:1.33\n",
+            "loss at batch 200:1.25\n",
+            "loss at batch 300:1.21\n",
+            "loss at batch 400:1.27\n",
+            "Epochs 4\n",
+            "loss at batch 0:1.11\n",
+            "loss at batch 100:1.15\n",
+            "loss at batch 200:1.06\n",
+            "loss at batch 300:1.05\n",
+            "loss at batch 400:1.11\n",
+            "Epochs 5\n",
+            "loss at batch 0:0.97\n",
+            "loss at batch 100:1.01\n",
+            "loss at batch 200:0.92\n",
+            "loss at batch 300:0.93\n",
+            "loss at batch 400:0.99\n",
+            "Epochs 6\n",
+            "loss at batch 0:0.87\n",
+            "loss at batch 100:0.91\n",
+            "loss at batch 200:0.81\n",
+            "loss at batch 300:0.84\n",
+            "loss at batch 400:0.91\n",
+            "Epochs 7\n",
+            "loss at batch 0:0.79\n",
+            "loss at batch 100:0.82\n",
+            "loss at batch 200:0.73\n",
+            "loss at batch 300:0.77\n",
+            "loss at batch 400:0.84\n",
+            "Epochs 8\n",
+            "loss at batch 0:0.73\n",
+            "loss at batch 100:0.76\n",
+            "loss at batch 200:0.67\n",
+            "loss at batch 300:0.72\n",
+            "loss at batch 400:0.79\n",
+            "Epochs 9\n",
+            "loss at batch 0:0.68\n",
+            "loss at batch 100:0.70\n",
+            "loss at batch 200:0.62\n",
+            "loss at batch 300:0.67\n",
+            "loss at batch 400:0.75\n"
+          ]
+        }
+      ]
     }
   ]
 }
