--- a/EDA_Cardio_Good_Fitness_Project_Problem_Statement.ipynb
+++ b/EDA_Cardio_Good_Fitness_Project_Problem_Statement.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPAgAhw0Isyx4vdw+OlSWsD",
+      "mount_file_id": "1BbaeUcj9HoJyujjiQG4dOzx6KNIcZwMh",
+      "authorship_tag": "ABX9TyMD7jCd2RrczZHt64msyI3i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -974,7 +974,7 @@
       "source": [
         "* `Age:` On average they are 28 years old. 75% of the persons are less than or equal to 33 years old. There are some persons which are 50 years old.\n",
         "* `Education`: On average they have 16 years of education and some have 21 years. some of them may have higher education level.\n",
-        "* `Usage`: 75% of the customers wants to use the treadmill at least 4 times per week, it very closy to the average: 3.45.\n",
+        "* `Usage`: 75% of customers want to use the treadmill at least 4 times a week, very close to the average: 3.45 The distribution between Usage and Fitness looks good\n",
         "The distribution between Usage and Fitnees looks like fine.\n",
         "* `Income`: On average the income has around 53719. There is a huge difference between the maximum value and the 75% percentile of the data which indicates there might be outliers present in this column. \n",
         "* `Miles`: On average the miles has around 103. The column has a large standard deviation of 51.83 miles.\n",
@@ -1022,7 +1022,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* None duplicate entries found in the data."
+        "* None duplicate entry was found in the data."
       ],
       "metadata": {
         "id": "0XyCidNvH3eM"
@@ -1239,12 +1239,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Observations:\n",
-        "* The total number of different products sold by the company are 3: 'TM195', 'TM498', 'TM798'. The best selling product is the TM195 representing 44% of the total items sold, in second position is the TM498 representing 33%.\n",
+        "**Observations:**\n",
+        "* The total number of different products sold by the company are 3: 'TM195', 'TM498', 'TM798'. The best-selling product is the TM195 representing 44% of the total items sold, and in the second position is the TM498 representing 33%.\n",
         "\n",
-        "* There are only 2 kind of customer's genders in the dataset:  'Male', 'Female'. The Male gender represents 57.7% of the total customers.\n",
+        "* There are only 2 kinds of customers genders in the dataset: 'Male', and 'Female'. The Male gender represents 57.7% of the total customers.\n",
         "\n",
-        "* There are only 2 kind of customer's MaritalStatus in the dataset: 'Single', 'Partnered'. The Partnered MaritalStatus represents 59% of the total customers.\n",
+        "* There are only 2 kinds of customers' MaritalStatus in the dataset: 'Single', 'Partnered'. The Partnered MaritalStatus represents 59% of the total customers.\n",
         "\n"
       ],
       "metadata": {
@@ -1347,9 +1347,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* The distribution is skewed towards right.\n",
-        "* There are outliers present in this column. \n",
-        "* Values above 45 years are being represented as outliers in the boxplot, indicate there are some customers that are at least more than 45 years old."
+        "* The distribution is skewed towards the right.\n",
+        "* There are outliers present in this column.\n",
+        "* Values above 45 years are represented as outliers in the boxplot, indicating there are some customers that are at least more than 45 years old."
       ],
       "metadata": {
         "id": "s3USEtuXMqgs"
@@ -1396,9 +1396,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* The distribution is skewed towards right.\n",
+        "\n",
+        "* The distribution is skewed towards the right.\n",
         "* Customers with more than 18 years of education are being represented as outliers by the boxplot.\n",
-        "* Let's find out how many such customers are there which have more than 18 years of education and what are the gender of such customers."
+        "* Let's find out how many such customers are there which have more than 18 years of education and what is the gender of such customers."
       ],
       "metadata": {
         "id": "ouY2h2unO19h"
@@ -1823,9 +1824,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Observation:\n",
-        "* In the United States, public school usually starts between age 4 and 6 and continues until around age 17 to 18. The 3 first customers can match 20/21 Education years  because the difference of their age with their Education are above 4 years. It means they stuying since they were 5 years old.\n",
-        "* The outliers in Age are a valid data entry\n"
+        "\n",
+        "* In the United States, public school usually starts between ages 4 and 6 and continues until around age 17 to 18. The 3 first customers can match 20/21 Education years because the difference in their age with their Education is above 4 years. It means they studying since they were 5 years old.\n",
+        "* The outliers in Age are a valid data entry"
       ],
       "metadata": {
         "id": "yhg6FAEmbtJe"
@@ -1885,8 +1886,9 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "* The distribution is similar to that of Education. It suggests possible correlation between the two variables\n",
-        "* There are outliers towards the right, indicating that some customers Usage are above 5 per week\n"
+        "\n",
+        "* The distribution is similar to that of Education. It suggests a possible correlation between the two variables\n",
+        "* There are outliers towards the right, indicating that some customer's Usage is above 5 per week\n"
       ],
       "metadata": {
         "id": "VBSC9UzgSsLZ"
@@ -1933,8 +1935,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* The distribution is skewed towards left.\n",
-        "* Both the mean and median, indicating that the Self rated fitness score of the customer are good\n",
+        "* The distribution is skewed towards the left.\n",
+        "* Both the mean and median, indicate that the Self-rated fitness score of the customer is good\n",
         "* There are, however, outliers towards the left, indicating that fitness score is extremely low on some customers\n"
       ],
       "metadata": {
@@ -1982,8 +1984,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* The distribution is skewed towards right.\n",
-        "* There are, however, outliers towards the right, indicating that some customers income are extremely high in comparison with the mean"
+        "* The distribution is skewed towards the right.\n",
+        "* There are, however, outliers towards the right, indicating that some customer's incomes are extremely high in comparison with the mean"
       ],
       "metadata": {
         "id": "iHo-Fjkfs63j"
@@ -2030,8 +2032,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* The distribution is skewed towards right.\n",
-        "* There are, however, outliers towards the right, indicating that some customer's miles are extremely high in comparison with the mean, some of them could be an athletes\n",
+        "* The distribution is skewed towards the right.\n",
+        "* There are, however, outliers towards the right, indicating that some customer's miles are extremely high in comparison with the mean, some of the customers could be an athletes\n",
         "\n"
       ],
       "metadata": {
@@ -2211,7 +2213,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* There is more Customers with Partners than Single customers\n",
+        "* There are more Customers with Partners than Single customers\n",
         "* The Customers with Partners represent 59% of the total customer"
       ],
       "metadata": {
@@ -2350,11 +2352,11 @@
       "source": [
         "**Observations**\n",
         "\n",
-        "* **Age** has a positive correlation with **Income**, it indicates that more older the customer is more the number of Income.\n",
+        "* **Age** has a positive correlation with **Income**, it indicates that older customer has more income than younger ones.\n",
         "* **Education** column show a high correlation with **Income** which is expected.\n",
-        "* **Usage** has a high positive correlation with the columns: **Milles**, **Fitness** and **Income**, it appears that customers tend to get more Usage based on higher number of Miles, Fitness and Income\n",
-        "* **Fitness** and **Miles** shows a high correlation which makes sense as if the Fitness number is more the Miles area will also be more.\n",
-        "* **Income** column also has a positive correlation with all other columns, it indicates that more Income the customer has more **Educated** and **Fitness** it tends to be.\n",
+        "* **Usage** has a high positive correlation with the columns: **Milles**, **Fitness**, and **Income**, it appears that customers tend to get more Usage based on a higher number of Miles, Fitness, and Income\n",
+        "* **Fitness** and **Miles** show a high correlation which makes sense as if the Fitness number is more the Miles area will also be more.\n",
+        "* **Income** column also has a positive correlation with all other columns, it indicates that the more Income the customer has more **Educated** and **Fitness** it tends to be.\n",
         "* **Miles** has a low positive correlation with **Age**, it indicates that more older the customer is the number of Miles will decrease, which is expected.\n"
       ],
       "metadata": {
@@ -2996,7 +2998,7 @@
       "source": [
         "Observation:\n",
         "* The number of Usage is very higher between the 20 and 26 years old when we see the spread across customer Age*\n",
-        "* The Product's Usage tends to decrease after the Age 30.\n",
+        "* The Product's Usage tends to decrease after the Age of 30.\n",
         "* Customers who are under 25 years older tend to prefer the products: TM195 and TM498 over TMP798 which is professional equipment more expensive\n",
         "* The Product TMP798 has higher Usage for customers which are between 25 and 30 years old, while the Product TM498 is for customers between 30 and 40 years old\n"
       ],
@@ -3056,9 +3058,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- *The `Income` column has a wide range of values with lots of outliers. However we are not going to treat this column since the number of Income can have a varying range and we can miss out on some genuine values if we treat this column*\n",
+        "- *The `Income` column has a wide range of values with lots of outliers. However, we are not going to treat this column since the number of Income can have a varying range and we can miss out on some genuine values if we treat this column*\n",
         "\n",
-        "- *Age, Education, Miles and Usage, however all of them seem to be genuine values. So we are not going to treat the outliers present in these columns*"
+        "- *Age, Education, Miles, and Usage, all of them seem to be genuine values. So we are not going to treat the outliers present in these columns*"
       ],
       "metadata": {
         "id": "frbnlZlJ1tQ6"
@@ -3119,15 +3121,37 @@
     {
       "cell_type": "code",
       "source": [
-        "#print the report as html\n",
+        "#print the analysis as html\n",
+        "!cp -p '/content/drive/MyDrive/University of Texas/Fundamentals of AIML/project/EDA - Cardio Good Fitness Project - Problem Statement.ipynb' /\n",
         "%%shell\n",
-        "jupyter nbconvert --to html /PATH/TO/YOUR/NOTEBOOKFILE.ipynb"
+        "jupyter nbconvert --to html '/EDA - Cardio Good Fitness Project - Problem Statement.ipynb'"
       ],
       "metadata": {
-        "id": "ESoA9buA3mVg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ESoA9buA3mVg",
+        "outputId": "f762f22a-0b02-479b-a797-39135b891625"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[NbConvertApp] Converting notebook /EDA - Cardio Good Fitness Project - Problem Statement.ipynb to html\n",
+            "[NbConvertApp] Writing 1029566 bytes to /EDA - Cardio Good Fitness Project - Problem Statement.html\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
